--- a/index.html
+++ b/index.html
@@ -54,15 +54,45 @@
         <div class="section-dkblue" id="projects">
             <h2>Projects that I'm proud of</h2>
             <article>
-                <h4>Latest projects</h4>
-                <h3>ASAP clothes</h3>
-                <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
-                <h4>Technologies used include:</h4>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>SVG</li>
-                </ul>
+                <div class="text">
+                    <h4>Latest projects</h4>
+                    <h3>ASAP clothes</h3>
+                    <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
+                    <h4>Technologies used include:</h4>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>SVG</li>
+                    </ul>
+                </div>
+                <img src="./img/asap.jpg" alt="Web-page image">
+            </article>
+            <article id="reverse">
+                <div class="text">
+                    <h4>Latest projects</h4>
+                    <h3>ASAP clothes</h3>
+                    <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
+                    <h4>Technologies used include:</h4>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>SVG</li>
+                    </ul>
+                </div>
+                <img src="./img/triple.jpg" alt="Web-page image">
+            </article>
+            <article>
+                <div class="text">
+                    <h4>Latest projects</h4>
+                    <h3>ASAP clothes</h3>
+                    <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
+                    <h4>Technologies used include:</h4>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>SVG</li>
+                    </ul>
+                </div>
                 <img src="./img/asap.jpg" alt="Web-page image">
             </article>
         </div>
