--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <p>Currently, I'm working in <a href='https://bordio.com/'>Bordio</a> and on my personal projects.</p>
     </section>
     <div class="gradient2"></div>
-    <section>
-        <div class="section-dkblue" id="projects">
+    <section class="section-dkblue">
+        <div id="projects">
             <h2>Projects that I'm proud of</h2>
             <article>
                 <div class="text">
