--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Udodov portfolio</title>
+    <title>Alex Udodov - Front-end engineer</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,9 +21,9 @@
             </a>
             </h1>
         </li>
-        <li><a href='#projects'>Projects</a></li>
-        <li><a href='./about.html'>About</a></li>
-        <li><a href='#contact'>Contact</a></li>
+        <li><a href='index.html#projects'>Projects</a></li>
+        <li><a href='about.html'>About</a></li>
+        <li><a href='index.html#contact'>Contact</a></li>
         <li><a href='https://www.linkedin.com/in/alex-udodov-5462b8236/' target="_blank">
             <i class="fa-brands fa-linkedin" aria-hidden="true"></i>  
             <span class='sr-only'>LinkedIn</span>
@@ -43,65 +43,23 @@
         </ul>
     </nav>
     <div class="gradient"></div>
-    <section id='intro'>
-        <p class='name'>Hi, my name is <span>Alex Udodov.</span></p>
-        <h2>I create web apps.</h2>
-        <p>I'm a self-taught front-end engineer with experience in HTML, CSS(SASS), JavaScript and React.</p>
-        <p>Currently, I'm working in <a href='https://bordio.com/'>Bordio</a> and on my personal projects.</p>
-    </section>
-    <div class="gradient2"></div>
     <section class="section-dkblue">
         <div id="projects">
-            <h2>Projects that I'm proud of</h2>
+            <h2>About Alex Udodov</h2>
             <article>
                 <div class="text">
-                    <h4>Latest projects</h4>
-                    <h3>ASAP clothes</h3>
+                    <h3>Just the highlights</h3>
                     <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
-                    <h4>Technologies used include:</h4>
+                    <h4>My favourites technologies include:</h4>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>SVG</li>
+                        <li>JavaScript</li>
                     </ul>
                 </div>
-                <img src="./img/asap.jpg" alt="Web-page image">
-            </article>
-            <article id="reverse">
-                <div class="text">
-                    <h4>Latest projects</h4>
-                    <h3>ASAP clothes</h3>
-                    <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
-                    <h4>Technologies used include:</h4>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>SVG</li>
-                    </ul>
-                </div>
-                <img src="./img/triple.jpg" alt="Web-page image">
-            </article>
-            <article>
-                <div class="text">
-                    <h4>Latest projects</h4>
-                    <h3>ASAP clothes</h3>
-                    <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
-                    <h4>Technologies used include:</h4>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>SVG</li>
-                    </ul>
-                </div>
-                <img src="./img/asap.jpg" alt="Web-page image">
+                <img src="./img/alex.jpg" alt="Web-page image">
             </article>
         </div>
-    </section>
-    <div class="gradient"></div>
-    <section id='contact'>
-        <h2>Contact me</h2>
-        <p>I'm always interested in hearing about new opportunities in web development, no matter how big or small project is. I'm also open for learning new technologies and techniques. Feel free to contact me.</p>
-        <a href='mailto:alex.udodov.web@gmail.com' class="button">Email me</a>
     </section>
     <div class="gradient2"></div>
     <footer>
