adding new texts and projects

--- a/about.html
+++ b/about.html
@@ -49,12 +49,18 @@
             <article>
                 <div class="text">
                     <h3>Just the highlights</h3>
-                    <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
-                    <h4>My favourites technologies include:</h4>
+                    <p class="blackbox">I'm a Front-end Developer with a focus on creating visually appealing and user-friendly interfaces. Proficient in HTML, CSS, and JavaScript, I utilize advanced technologies such as Semantic HTML, Flex layouts, and SEO best practices to design and develop responsive websites and applications.
+                        <br><br>
+                        Passionate about utilizing efficient tools and libraries, I have experience working with SASS and React. I have also collaborated in Agile teams, utilizing team management tools such as Jira Software, Kanban boards, and Sprints.
+                        <br><br>
+                        In addition to my technical skills, I bring a unique perspective to my work as a former actor, with strong communication and public performance skills honed through my education and training. I am constantly seeking new opportunities to expand my expertise and provide valuable contributions to my team.
+                        </p>
+                    <h4>My favourites technologies includes:</h4>
                     <ul>
                         <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
+                        <li>CSS/SASS</li>
+                        <li>JAVASCRIPT</li>
+                        <li>REACT</li>
                     </ul>
                 </div>
                 <img src="./img/alex.jpg" alt="Web-page image">
