--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id='intro'>
         <p class='name'>Hi, my name is <span>Alex Udodov.</span></p>
         <h2>I create web apps.</h2>
-        <p>I'm a self-taught front-end engineer with experience in HTML, CSS(SASS), JavaScript and React.</p>
+        <p>I'm a Front-end developer with focus on creating visually appealing and user-friendly interfaces. Proficient in HTML, CSS(SASS), JavaScript and React.</p>
         <p>Currently, I'm working in <a href='https://bordio.com/'>Bordio</a> and on my personal projects.</p>
     </section>
     <div class="gradient2"></div>
@@ -57,12 +57,12 @@
                 <div class="text">
                     <h4>Latest projects</h4>
                     <h3>ASAP clothes</h3>
-                    <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
+                    <p class="blackbox">User-friendly online clothes store with different clothes categories. I've developed sign-in/sign-up, cart, checkout and payment features.</p>
                     <h4>Technologies used include:</h4>
                     <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>SVG</li>
+                        <li>REACT</li>
+                        <li>REDUX</li>
+                        <li>NETLIFY</li>
                     </ul>
                 </div>
                 <img src="./img/asap.jpg" alt="Web-page image">
@@ -70,30 +70,37 @@
             <article id="reverse">
                 <div class="text">
                     <h4>Latest projects</h4>
-                    <h3>ASAP clothes</h3>
-                    <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
+                    <h3>Minecraft Education</h3>
+                    <p class="blackbox">Visually impressive landing-page that balances beauty and complexity. I've implemented a lot of complex backgrounds and intricate details.</p>
                     <h4>Technologies used include:</h4>
                     <ul>
                         <li>HTML</li>
-                        <li>CSS</li>
+                        <li>SASS</li>
+                        <li>JAVASCRIPT</li>
+                        <li>WEBP</li>
                         <li>SVG</li>
+                        <li>GIT</li>
                     </ul>
                 </div>
-                <img src="./img/triple.jpg" alt="Web-page image">
+                <img src="./img/minecraft-education.webp" alt="Web-page image">
             </article>
             <article>
                 <div class="text">
                     <h4>Latest projects</h4>
-                    <h3>ASAP clothes</h3>
-                    <p class="blackbox">Description of the project. This should be a long, long description of my greatest page I've ever made with React. I've made routing, cart, test payement method e.t.c.</p>
+                    <h3>Triple</h3>
+                    <p class="blackbox">Fully responsive web-page with big quiz section for increasing users conversion. I've increased web-page performance up to 100% on desktop and mobile versions by optimizing content and images weight.</p>
                     <h4>Technologies used include:</h4>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
+                        <li>JAVASCRIPT</li>
                         <li>SVG</li>
+                        <li>GIT</li>
+                        <li>FIGMA</li>
+                        <li>OPTIMIZATION TOOLS</li>
                     </ul>
                 </div>
-                <img src="./img/asap.jpg" alt="Web-page image">
+                <img src="./img/triple.jpg" alt="Web-page image">
             </article>
         </div>
     </section>
@@ -105,7 +112,7 @@
     </section>
     <div class="gradient2"></div>
     <footer>
-        <h2>Alex Udodov &middot Frontend engineer</h2>
+        <h2>Alex Udodov &middot Frontend developer</h2>
         <ul>
         <li>
         <a href='https://www.linkedin.com/in/alex-udodov-5462b8236/' target="_blank">
