adding links to the projects

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <article>
                 <div class="text">
                     <h4>Latest projects</h4>
-                    <h3>ASAP clothes</h3>
+                    <a href="https://visionary-rugelach-771c34.netlify.app/"><h3>ASAP clothes</h3></a>
                     <p class="blackbox">User-friendly online clothes store with different clothes categories. I've developed sign-in/sign-up, cart, checkout and payment features.</p>
                     <h4>Technologies used include:</h4>
                     <ul>
@@ -70,7 +70,7 @@
             <article id="reverse">
                 <div class="text">
                     <h4>Latest projects</h4>
-                    <h3>Minecraft Education</h3>
+                    <a href="https://alexwebdev01.github.io/minecraft-education/"><h3>Minecraft Education</h3></a>
                     <p class="blackbox">Visually impressive landing-page that balances beauty and complexity. I've implemented a lot of complex backgrounds and intricate details.</p>
                     <h4>Technologies used include:</h4>
                     <ul>
@@ -87,7 +87,7 @@
             <article>
                 <div class="text">
                     <h4>Latest projects</h4>
-                    <h3>Triple</h3>
+                    <a href="https://dev.gim.lv/triple/lv/ieksdurvis/"><h3>Triple</h3></a>
                     <p class="blackbox">Fully responsive web-page with big quiz section for increasing users conversion. I've increased web-page performance up to 100% on desktop and mobile versions by optimizing content and images weight.</p>
                     <h4>Technologies used include:</h4>
                     <ul>
