--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </a>    
         </li>
         <li>
-            <a href='https://www.linkedin.com/in/alex-udodov-5462b8236/' target="_blank" class='button'>
+            <a href='./resume.pdf' download="Alex udodov - Front-end developer resume" target="_blank" class='button'>
             Resume
             </a>
         </li>
