--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
             </a>    
         </li>
         <li>
-            <a href='https://www.linkedin.com/in/alex-udodov-5462b8236/' target="_blank" class='button'>
-            Resume
+            <a href='./resume.pdf' download="Alex udodov - Front-end developer resume" target="_blank" class='button'>
+                Resume
             </a>
         </li>
         </ul>
