text and title updates

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Udodov - Front-end engineer</title>
+    <title>Alex Udodov - About me</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +69,7 @@
     </section>
     <div class="gradient2"></div>
     <footer>
-        <h2>Alex Udodov &middot Frontend engineer</h2>
+        <h2>Alex Udodov &middot Front-end developer</h2>
         <ul>
         <li>
         <a href='https://www.linkedin.com/in/alex-udodov-5462b8236/' target="_blank">
