change Triple link to Prod

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <article>
                 <div class="text">
                     <h4>Latest projects</h4>
-                    <a href="https://dev.gim.lv/triple/lv/ieksdurvis/"><h3>Triple</h3></a>
+                    <a href="https://triple.lv/lv/ieksdurvis/"><h3>Triple</h3></a>
                     <p class="blackbox">Fully responsive web-page with big quiz section for increasing users conversion. I've increased web-page performance up to 100% on desktop and mobile versions by optimizing content and images weight.</p>
                     <h4>Technologies used include:</h4>
                     <ul>
